force-app/main/default/objects/Opportunity/fields/Close_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Formula__c</fullName>
    <formula>TEXT(MONTH( CloseDate ))+ &quot;/&quot; + TEXT(DAY(CloseDate ))+ &quot;/&quot; + TEXT(YEAR(CloseDate ))</formula>
    <label>Close Date Formula</label>
    <type>Text</type>
</CustomField>