force-app/main/default/objects/Opportunity/fields/Close_Date_Text_Clone__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Text_Clone__c</fullName>
    <label>Close Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>