force-app/main/default/objects/Opportunity/fields/Date_Added_text_clone__c.field-meta.xml
<CustomField>
    <fullName>Date_Added_text_clone__c</fullName>
    <label>Date Added</label>
    <length>100</length>
    <type>Text</type>
</CustomField>