force-app/main/default/objects/Opportunity/fields/Date_formatting_formula__c.field-meta.xml
<CustomField>
    <fullName>Date_formatting_formula__c</fullName>
    <formula>TEXT(MONTH( Date_Added__c ))+ &quot;/&quot; + TEXT(DAY(Date_Added__c ))+ &quot;/&quot; + TEXT(YEAR(Date_Added__c ))</formula>
    <label>Date formatting formula</label>
    <type>Text</type>
</CustomField>