force-app/main/default/objects/Opportunity/fields/Deal_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Source__c</fullName>
    <label>Deal Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>