force-app/main/default/objects/Opportunity/fields/Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Deal_Value__c</fullName>
    <label>Deal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>