force-app/main/default/objects/Opportunity/fields/Outstanding_Commission__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Commission__c</fullName>
    <label>Outstanding Commission</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>