force-app/main/default/objects/Opportunity/fields/Outstanding_Commission_RollSum__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Commission_RollSum__c</fullName>
    <label>Outstanding Commission(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>