force-app/main/default/objects/Opportunity/fields/Outstanding_Commission_s__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Commission_s__c</fullName>
    <label>Outstanding Commission(s)</label>
    <summarizedField>Commission__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Commission__c.Est_Act__c</field>
        <operation>equals</operation>
        <value>Estimated</value>
    </summaryFilterItems>
    <summaryForeignKey>Commission__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>