force-app/main/default/objects/Opportunity/fields/Paid_Commission_Rollsum__c.field-meta.xml
<CustomField>
    <fullName>Paid_Commission_Rollsum__c</fullName>
    <label>Paid Commission(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>