force-app/main/default/objects/Opportunity/fields/Payment_01__c.field-meta.xml
<CustomField>
    <fullName>Payment_01__c</fullName>
    <label>Payment 01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>