force-app/main/default/objects/Opportunity/fields/Payment_02__c.field-meta.xml
<CustomField>
    <fullName>Payment_02__c</fullName>
    <label>Payment 02</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>