force-app/main/default/objects/Opportunity/fields/Payment_03__c.field-meta.xml
<CustomField>
    <fullName>Payment_03__c</fullName>
    <label>Payment 03</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>