force-app/main/default/objects/Opportunity/fields/Payment_Date_01__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_01__c</fullName>
    <label>Payment Date 01</label>
    <type>Date</type>
</CustomField>