force-app/main/default/objects/Opportunity/fields/Payment_Date_02__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_02__c</fullName>
    <label>Payment Date 02</label>
    <type>Date</type>
</CustomField>