force-app/main/default/objects/Opportunity/fields/Payment_Date_03__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_03__c</fullName>
    <label>Payment Date 03</label>
    <type>Date</type>
</CustomField>