force-app/main/default/objects/Opportunity/fields/Stage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Stage_Notes__c</fullName>
    <label>Stage Notes</label>
    <type>TextArea</type>
</CustomField>