force-app/main/default/objects/Opportunity/fields/Total_Commission_RollSum__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_RollSum__c</fullName>
    <label>Total Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>