force-app/main/default/objects/Opportunity/fields/Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions__c</fullName>
    <label>Total Commission</label>
    <summarizedField>Commission__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Commission__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>