force-app/main/default/objects/Opportunity/recordTypes/City.recordType-meta.xml
<RecordType>
    <fullName>City</fullName>
    <active>false</active>
    <businessProcess>City</businessProcess>
    <label>City</label>
</RecordType>