force-app/main/default/objects/Opportunity/recordTypes/Lease_Acquisition.recordType-meta.xml
<RecordType>
    <fullName>Lease_Acquisition</fullName>
    <active>true</active>
    <businessProcess>Lease Acquisition</businessProcess>
    <description>Used for Lease Acquisition</description>
    <label>Lease Acquisition</label>
</RecordType>