force-app/main/default/objects/Opportunity/recordTypes/Lease_Disposition.recordType-meta.xml
<RecordType>
    <fullName>Lease_Disposition</fullName>
    <active>true</active>
    <businessProcess>Lease Disposition</businessProcess>
    <description>Used for Lease Disposition</description>
    <label>Lease Disposition</label>
</RecordType>